--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-    "name": "@jackstenglein/mui-mentions",
+    "name": "@yurialessandrom/mui-mentions-rr",
     "version": "0.1.8",
-    "description": "@mention people in a MUI TextField",
+    "description": "@mention people in a MUI TextField (React 17+)",
     "main": "./dist/cjs/index.js",
     "module": "./dist/esm/index.js",
     "types": "./dist/esm/index.d.ts",
@@ -19,7 +19,7 @@
     },
     "repository": {
         "type": "git",
-        "url": "git+https://github.com/jackstenglein/mui-mentions.git"
+        "url": "git+https://github.com/YuriAlessandro/mui-mentions.git"
     },
     "keywords": [
         "react",
@@ -28,7 +28,7 @@
         "MUI",
         "textfield"
     ],
-    "author": "Jack Stenglein",
+    "author": "Yuri Martins (from Jack Stenglein repo)",
     "license": "MIT",
     "devDependencies": {
         "@emotion/react": "^11.11.4",
@@ -62,7 +62,7 @@
         "@emotion/react": "^11.11.4",
         "@emotion/styled": "^11.11.0",
         "@mui/material": ">=5.0.0",
-        "react": ">=18"
+        "react": ">=17"
     },
     "files": [
         "dist",
