--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@yurialessandrom/mui-mentions-rr",
-    "version": "0.1.8",
+    "version": "0.1.9",
     "description": "@mention people in a MUI TextField (React 17+)",
     "main": "./dist/cjs/index.js",
     "module": "./dist/esm/index.js",
@@ -35,7 +35,7 @@
         "@emotion/styled": "^11.11.0",
         "@mui/icons-material": "^5.15.14",
         "@mui/material": "^5.15.13",
-        "@testing-library/react": "^14.2.1",
+        "@testing-library/react": "12.1.5",
         "@types/invariant": "^2.2.37",
         "@types/jest": "^29.5.12",
         "@types/react": "^18.2.66",
